autenticacion de usuario para creacion de solicitudes